# USIM_demo

./: CMakeLists.txt  README.md  commondef.h  decode_application_template_entry_tlv.c  decode_application_template_entry_tlv.h  history.c  history.h  main.c  usim.c  usim.h  usim_if_linux.c  usim_if_linux.h  usim_if_noPCSC.c  usim_if_noPCSC.h  usim_if_windows.c  usim_if_windows.h
